Fix top margin on mobile again

--- a/src/styles/App.scss
+++ b/src/styles/App.scss
@@ -25,7 +25,7 @@
   background-color: black;
   height: 90vh;
   position: relative;
-  padding: 2rem 1rem 3rem;
+  padding: 1rem 1rem 3rem;
   display: flex;
   justify-content: center;
   @include tablet {
